# eml-rewrite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eml_rewrite/: __init__.py  cli.py  core.py  expansions.py  fix.py  notebook.py  path.py  pipeline.py  synthesize.py
tests/: test_cli.py  test_cli_integration.py  test_core.py  test_counterexample.py  test_expansions.py  test_fix.py  test_notebook.py  test_path.py  test_shim.py  test_synthesize.py
